# Campus-Maintenance-System

./: .gitignore  CONTRIBUTING.md  README.md  docker-compose.prod.yml  docker-compose.yml
backend/: .dockerignore  .env.example  README.md  pom.xml
backend/data/: smart-campus-maintenance.mv.db  smart-campus-maintenance.trace.db
cpp-optimization/: CMakeLists.txt  README.md
database/: README.md  seed_data.sql
database/migrations/: 001_create_users_table.sql  002_create_tickets_table.sql  003_create_ticket_logs_table.sql  004_create_assignments_table.sql  005_add_indexes.sql  006_add_constraints.sql
database/schemas/: erd.md  schema.sql
devops/: README.md
devops/docker/: Dockerfile-backend  Dockerfile-frontend  docker-compose.yml
devops/kubernetes/: deployment.yaml  service.yaml
documentation/: README.md
documentation/api/: endpoints.md
documentation/architecture/: system-architecture.md
documentation/guides/: admin-credentials-setup.md  deployment-guide.md  email-production-checklist.md  setup-guide.md  testing-guide.md  troubleshooting.md
documentation/scripts/: generate.py
documentation/team/: team-roles.md
frontend/: .dockerignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/nginx/: default.conf
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/context/: AccountContext.jsx  AuthContext.jsx  ThemeContext.jsx  account-context.js
frontend/src/hooks/: useAccount.js  useAuth.js  useTheme.js  useTickets.js
tests/: README.md
tests/e2e/: student-flow.test.js
(+289 files in other folders)
